--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,13 +11,13 @@
     <%= stylesheet_link_tag 'tailwind', 'inter-font', media: 'all', 'data-turbo-track': 'reload' %>
 
     <!-- Include JavaScript with appropriate attributes -->
-    <%= javascript_include_tag 'application', 'data-turbo-track': 'reload' %>
+    <!-- <%= javascript_include_tag 'application', 'data-turbo-track': 'reload' %> -->
     <%= javascript_importmap_tags %>
 
     <!-- Alpine.js script -->
     <script src="https://cdn.jsdelivr.net/npm/alpinejs@2.8.2" defer></script>
   </head>
-  <body class="bg-gray-100">
+  <body class="bg-black-100">
       <%= render 'shared/header' %> <!-- Include the header partial here -->
     <main class="container mx-auto mt-28 px-5 flex">
       <%= yield %>
